syntax = "proto3";

package pb.network.transport;
option go_package = "github.com/weisyn/v1/pb/network/transport";

// é€šç”¨è½½ä½“ï¼šç½‘ç»œå…ƒä¿¡æ¯ + ä¸é€æ˜ä¸šåŠ¡è½½è·
message Envelope {
  uint32 version        = 1;
  string protocol_id    = 2;  // æµå¼åè®®ID
  
  // ğŸ¯ ç ´åæ€§é‡æ„ï¼šTopic ç»“æ„åŒ–å­—æ®µï¼ˆæ›¿ä»£åŸ string topicï¼‰
  // åŸ topic å­—æ®µå·²åºŸå¼ƒï¼Œä½¿ç”¨ä»¥ä¸‹ç»“æ„åŒ–å­—æ®µï¼š
  // - namespace: ç½‘ç»œå‘½åç©ºé—´ï¼ˆå¦‚ "public-testnet-demo" / "mainnet-public"ï¼‰
  // - domain:    åè®®åŸŸï¼ˆå¦‚ "consensus" / "blockchain" / "network"ï¼‰
  // - name:      ä¸»é¢˜åï¼ˆå¦‚ "latest_block" / "tx_announce"ï¼‰
  // - version:   ç‰ˆæœ¬å·ï¼ˆå¦‚ "v1" / "v2"ï¼‰
  string namespace      = 13; // ç½‘ç»œå‘½åç©ºé—´ï¼ˆæ–°å¢ï¼‰
  string domain         = 14; // åè®®åŸŸï¼ˆæ–°å¢ï¼‰
  string name           = 15; // ä¸»é¢˜åï¼ˆæ–°å¢ï¼‰
  string topic_version  = 16; // ä¸»é¢˜ç‰ˆæœ¬ï¼ˆæ–°å¢ï¼Œé¿å…ä¸ Envelope.version å†²çªï¼‰
  
  // âš ï¸ åºŸå¼ƒå­—æ®µï¼ˆä¿ç•™ä»¥å…¼å®¹æ—§ç‰ˆæœ¬ï¼Œä½†ä¸åº”å†ä½¿ç”¨ï¼‰
  string topic          = 3;  // [åºŸå¼ƒ] è®¢é˜…ä¸»é¢˜ï¼Œä½¿ç”¨ namespace/domain/name/topic_version æ›¿ä»£
  
  string content_type   = 4;  // e.g. application/pb;type=BlockRange
  string encoding       = 5;  // "pb" | "json" | "raw"
  string compression    = 6;  // "none" | "gzip" | "snappy"
  bytes  payload        = 7;  // ä¸šåŠ¡è´Ÿè½½
  string correlation_id = 8;  // è¯·æ±‚é“¾è·¯ID
  string from_peer_id   = 9;
  uint64 timestamp      = 10; // ms
  string dedup_key      = 11; // å»é‡é”®
  bytes  signature      = 12; // ç­¾å
}

// æµå¼è¯·æ±‚
message RpcRequest {
  string   request_id = 1; // å”¯ä¸€è¯·æ±‚ID
  Envelope envelope   = 2; // ä¸šåŠ¡è½½è·å®¹å™¨
}

// æµå¼å“åº”
message RpcResponse {
  enum Status {
    OK    = 0;
    ERROR = 1;
  }
  string   request_id    = 1;
  Status   status        = 2;
  int32    error_code    = 3;   // åè®®/ä¸šåŠ¡è‡ªå®šä¹‰é”™è¯¯ç ç©ºé—´ï¼ˆNetworkä¸è§£é‡Šï¼‰
  string   error_message = 4;   // ç®€è¿°
  Envelope envelope      = 5;   // æˆåŠŸæ—¶æ‰¿è½½å›åŒ…ï¼›é”™è¯¯æ—¶å¯ä¸ºç©º
}

// å¿ƒè·³
message Heartbeat {
  uint64 timestamp = 1; // ms
}

// å¤§æŠ¥æ–‡åˆ†ç‰‡ï¼ˆå¯é€‰ï¼‰
message StreamChunk {
  string request_id = 1;
  uint32 index      = 2; // 0-based
  uint32 total      = 3;
  string compression= 4; // åˆ†ç‰‡å‹ç¼©ç­–ç•¥ï¼ˆå¯é€‰ï¼‰
  bytes  data       = 5; // åˆ†ç‰‡æ•°æ®ï¼ˆå¯ä¸ºEnvelopeåºåˆ—åŒ–å­—èŠ‚ï¼‰
}
