package examples

import (
	"context"
	"fmt"
	"sync"
	"time"

	"google.golang.org/protobuf/proto"

	transactionpb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	transportpb "github.com/weisyn/v1/pb/network/transport"
	logiface "github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	iface "github.com/weisyn/v1/pkg/interfaces/network"
	peer "github.com/libp2p/go-libp2p/core/peer"
)

// tx_propagation.go
// äº¤æ˜“ä¼ æ’­ç¤ºä¾‹ï¼šä¸¥æ ¼åŸºäºpbå®šä¹‰çš„äº¤æ˜“ä¼ æ’­å®ç°
// ğŸ¯ æ ¸å¿ƒåŸåˆ™ï¼šå®Œå…¨ä½¿ç”¨pbå®šä¹‰ï¼Œæ— ä»»ä½•è‡ªå®šä¹‰ç±»å‹æˆ–å…¼å®¹å±‚

// ==================== æ ¸å¿ƒæœåŠ¡ ====================

// TxPropagationService äº¤æ˜“ä¼ æ’­æœåŠ¡ - ä¸¥æ ¼åŸºäºpbåè®®
type TxPropagationService struct {
	network iface.Network
	logger  logiface.Logger

	// ä¸¥æ ¼ä½¿ç”¨pbå®šä¹‰çš„äº¤æ˜“å­˜å‚¨
	mu          sync.RWMutex
	mempool     map[string]*transactionpb.Transaction // äº¤æ˜“æ± ï¼šå“ˆå¸Œ -> pb.Transaction
	peerTxCache map[peer.ID]map[string]bool           // peerå·²çŸ¥äº¤æ˜“ç¼“å­˜
}

// NewTxPropagationService åˆ›å»ºäº¤æ˜“ä¼ æ’­æœåŠ¡
func NewTxPropagationService(network iface.Network, logger logiface.Logger) *TxPropagationService {
	return &TxPropagationService{
		network:     network,
		logger:      logger,
		mempool:     make(map[string]*transactionpb.Transaction),
		peerTxCache: make(map[peer.ID]map[string]bool),
	}
}

// ==================== åè®®å®šä¹‰ ====================
// åè®®å’Œä¸»é¢˜å¸¸é‡å·²åœ¨protocols.goä¸­ç»Ÿä¸€å®šä¹‰

const (
	// æœ¬åœ°ä½¿ç”¨çš„åè®®åˆ«å
	ProtocolTxBroadcast = "/weisyn/tx/broadcast/v1.0.0"
	TopicTxAnnounce     = "weisyn.tx.announce.v1"
)

// ==================== å…¬å…±æ¥å£å®ç° ====================

// AddTransaction æ·»åŠ äº¤æ˜“åˆ°ä¼ æ’­æ± 
func (s *TxPropagationService) AddTransaction(tx *transactionpb.Transaction) error {
	if tx == nil {
		return fmt.Errorf("transaction cannot be nil")
	}

	// è®¡ç®—äº¤æ˜“å“ˆå¸Œä½œä¸ºå”¯ä¸€æ ‡è¯†
	txHash := s.computeTransactionHash(tx)

	s.mu.Lock()
	s.mempool[txHash] = tx
	s.mu.Unlock()

	// å¹¿æ’­äº¤æ˜“
	return s.broadcastTransaction(tx, txHash)
}

// broadcastTransaction å¹¿æ’­äº¤æ˜“åˆ°ç½‘ç»œ
func (s *TxPropagationService) broadcastTransaction(tx *transactionpb.Transaction, txHash string) error {
	// åºåˆ—åŒ–äº¤æ˜“ä¸ºpbæ ¼å¼
	txData, err := proto.Marshal(tx)
	if err != nil {
		return fmt.Errorf("failed to marshal transaction: %w", err)
	}

	// ä½¿ç”¨transport.EnvelopeåŒ…è£…
	envelope := &transportpb.Envelope{
		Version:       1,
		Topic:         TopicTxAnnounce,
		ContentType:   "application/x-protobuf",
		Encoding:      "pb",
		Compression:   "none",
		Payload:       txData,
		CorrelationId: txHash,
		Timestamp:     uint64(time.Now().UnixMilli()),
	}

	envelopeData, err := proto.Marshal(envelope)
	if err != nil {
		return fmt.Errorf("failed to marshal envelope: %w", err)
	}

	// å‘å¸ƒåˆ°topic
	ctx := context.Background()
	return s.network.Publish(ctx, TopicTxAnnounce, envelopeData, nil)
}

// ==================== åè®®å¤„ç†å™¨ ====================

// RegisterHandlers æ³¨å†Œåè®®å¤„ç†å™¨
func (s *TxPropagationService) RegisterHandlers() error {
	// æ³¨å†Œäº¤æ˜“è¯·æ±‚å¤„ç†å™¨
	if err := s.network.RegisterStreamHandler(ProtocolTxRequest, s.handleTxRequest); err != nil {
		return fmt.Errorf("failed to register tx request handler: %w", err)
	}

	// è®¢é˜…äº¤æ˜“å…¬å‘Š
	_, err := s.network.Subscribe(TopicTxAnnounce, func(ctx context.Context, from peer.ID, topic string, data []byte) error {
		return s.handleTxAnnouncement(topic, data, from)
	}, nil)
	if err != nil {
		return fmt.Errorf("failed to subscribe to tx announcements: %w", err)
	}

	return nil
}

// handleTxRequest å¤„ç†äº¤æ˜“è¯·æ±‚ - ä¸¥æ ¼åŸºäºpbåè®®
func (s *TxPropagationService) handleTxRequest(ctx context.Context, from peer.ID, reqData []byte) ([]byte, error) {
	s.logger.Debugf("received tx request", "from", from.String())

	// ğŸš¨ å…³é”®é—®é¢˜ï¼šç¼ºå°‘pbå®šä¹‰
	// å½“å‰pb/network/protocol/ä¸­ç¼ºå°‘TxRequestæ¶ˆæ¯å®šä¹‰
	// è¿™é‡Œæš´éœ²äº†æ¶æ„é—®é¢˜ï¼šéœ€è¦å®Œå–„pbåè®®å®šä¹‰

	// ä¸´æ—¶æ–¹æ¡ˆï¼šè§£æä¸ºEnvelopeï¼Œä»ä¸­æå–äº¤æ˜“å“ˆå¸Œåˆ—è¡¨
	var envelope transportpb.Envelope
	if err := proto.Unmarshal(reqData, &envelope); err != nil {
		return nil, fmt.Errorf("failed to unmarshal request envelope: %w", err)
	}

	// âš ï¸ è®¾è®¡ç¼ºé™·æš´éœ²ï¼šéœ€è¦å®šä¹‰ä¸“é—¨çš„TxRequestæ¶ˆæ¯ç±»å‹
	// ç›®å‰æš‚æ—¶å‡è®¾payloadæ˜¯äº¤æ˜“å“ˆå¸Œåˆ—è¡¨çš„ç®€å•ç¼–ç 

	return s.buildTxResponse(from, envelope.Payload)
}

// buildTxResponse æ„å»ºäº¤æ˜“å“åº”
func (s *TxPropagationService) buildTxResponse(from peer.ID, hashData []byte) ([]byte, error) {
	// è·å–è¯·æ±‚çš„äº¤æ˜“
	s.mu.RLock()
	var responseTransactions []*transactionpb.Transaction
	// ç®€åŒ–å¤„ç†ï¼šè¿”å›æ‰€æœ‰äº¤æ˜“ï¼ˆå®é™…åº”è§£æå…·ä½“çš„å“ˆå¸Œè¯·æ±‚ï¼‰
	for _, tx := range s.mempool {
		responseTransactions = append(responseTransactions, tx)
	}
	s.mu.RUnlock()

	// æ„å»ºå“åº”Envelope
	var responseData []byte
	if len(responseTransactions) > 0 {
		// åºåˆ—åŒ–äº¤æ˜“åˆ—è¡¨
		// âš ï¸ è®¾è®¡é—®é¢˜ï¼šéœ€è¦å®šä¹‰TxResponseæ¶ˆæ¯ç±»å‹åŒ…å«äº¤æ˜“åˆ—è¡¨
		// ç›®å‰ç®€åŒ–å¤„ç†ï¼Œåºåˆ—åŒ–ç¬¬ä¸€ä¸ªäº¤æ˜“
		var err error
		responseData, err = proto.Marshal(responseTransactions[0])
		if err != nil {
			return nil, fmt.Errorf("failed to marshal response: %w", err)
		}
	}

	envelope := &transportpb.Envelope{
		Version:     1,
		ContentType: "application/x-protobuf",
		Encoding:    "pb",
		Compression: "none",
		Payload:     responseData,
		Timestamp:   uint64(time.Now().UnixMilli()),
	}

	return proto.Marshal(envelope)
}

// handleTxAnnouncement å¤„ç†äº¤æ˜“å…¬å‘Š
func (s *TxPropagationService) handleTxAnnouncement(topic string, data []byte, from peer.ID) error {
	s.logger.Debugf("received tx announcement", "topic", topic, "from", from.String())

	// è§£æEnvelope
	var envelope transportpb.Envelope
	if err := proto.Unmarshal(data, &envelope); err != nil {
		return fmt.Errorf("failed to unmarshal announcement: %w", err)
	}

	// ä»payloadä¸­è§£æäº¤æ˜“
	var tx transactionpb.Transaction
	if err := proto.Unmarshal(envelope.Payload, &tx); err != nil {
		return fmt.Errorf("failed to unmarshal transaction: %w", err)
	}

	// éªŒè¯å¹¶å­˜å‚¨äº¤æ˜“
	txHash := s.computeTransactionHash(&tx)

	s.mu.Lock()
	if _, exists := s.mempool[txHash]; !exists {
		s.mempool[txHash] = &tx
		s.markPeerKnowsTx(from, txHash)
		s.logger.Infof("received new transaction", "hash", txHash, "from", from.String())
	}
	s.mu.Unlock()

	return nil
}

// ==================== è¾…åŠ©æ–¹æ³• ====================

// computeTransactionHash è®¡ç®—äº¤æ˜“å“ˆå¸Œ
func (s *TxPropagationService) computeTransactionHash(tx *transactionpb.Transaction) string {
	// åŸºäºpbå­—æ®µè®¡ç®—å“ˆå¸Œ
	// å®é™…å®ç°åº”ä½¿ç”¨é¡¹ç›®æ ‡å‡†å“ˆå¸Œç®—æ³•
	return fmt.Sprintf("tx_v%d_t%d_i%d",
		tx.GetVersion(),
		tx.GetCreationTimestamp(),
		len(tx.GetInputs()))
}

// markPeerKnowsTx æ ‡è®°peerå·²çŸ¥ç‰¹å®šäº¤æ˜“
func (s *TxPropagationService) markPeerKnowsTx(peerID peer.ID, txHash string) {
	if s.peerTxCache[peerID] == nil {
		s.peerTxCache[peerID] = make(map[string]bool)
	}
	s.peerTxCache[peerID][txHash] = true
}

// ==================== æ¶æ„é—®é¢˜æš´éœ² ====================

/*
ğŸš¨ é€šè¿‡å½»åº•å®ç°pbä¼˜å…ˆåŸåˆ™ï¼Œæš´éœ²äº†ä»¥ä¸‹æ¶æ„é—®é¢˜ï¼š

1. **pbåè®®å®šä¹‰ä¸å®Œæ•´**ï¼š
   - ç¼ºå°‘ TxRequest æ¶ˆæ¯å®šä¹‰
   - ç¼ºå°‘ TxResponse æ¶ˆæ¯å®šä¹‰
   - ç¼ºå°‘ TxAnnouncement æ¶ˆæ¯å®šä¹‰

2. **éœ€è¦è¡¥å……çš„pbå®šä¹‰**ï¼š
   ```proto
   // åº”åœ¨pb/network/protocol/transaction.protoä¸­æ·»åŠ ï¼š
   message TxRequest {
     repeated string tx_hashes = 1;
     uint32 max_transactions = 2;
   }

   message TxResponse {
     repeated Transaction transactions = 1;
     repeated string missing_hashes = 2;
   }

   message TxAnnouncement {
     string tx_hash = 1;
     uint64 timestamp = 2;
     string peer_id = 3;
   }
   ```

3. **å½“å‰è§£å†³æ–¹æ¡ˆçš„å±€é™æ€§**ï¼š
   - ä½¿ç”¨generic EnvelopeåŒ…è£…æ‰€æœ‰æ¶ˆæ¯
   - ç¼ºå°‘ç±»å‹åŒ–çš„æ¶ˆæ¯å¤„ç†
   - æ— æ³•å……åˆ†åˆ©ç”¨protobufçš„ç±»å‹å®‰å…¨ç‰¹æ€§

âœ… **æ­£ç¡®çš„åšæ³•**ï¼š
1. å®Œå–„pbåè®®å®šä¹‰
2. é‡æ–°ç”Ÿæˆpbä»£ç 
3. åŸºäºå®Œæ•´pbå®šä¹‰é‡æ–°å®ç°æ­¤ç¤ºä¾‹

è¿™ç§å½»åº•çš„pbä¼˜å…ˆå®ç°æš´éœ²äº†æ¶æ„è®¾è®¡çš„çœŸå®çŠ¶å†µï¼Œ
æ¯”å…¼å®¹å±‚çš„ä¼ªå®ç°æ›´æœ‰ä»·å€¼ã€‚
*/
